#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([karvig], [0.4], [mail@karthikkrishnan.me])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(karvig, 0.4)
AC_CONFIG_SRCDIR([src/slist_main.c])

LT_INIT

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile lib/Makefile src/Makefile])
AC_OUTPUT
